# proc-rs

./: .gitignore  Cargo.toml  README.md
docs/: CNAME  index.html
docs/assets/: index-BDe507-W.js  index-BaynElLh.css  index-Bk02YNxF.css  index-Cto8GeBg.js  index-CuWQD5cY.js  index-CxkgSj-8.js  index-D2ihygXj.css  index-D7SYCAUl.js  index-DNKnCemy.css  index-DXRLx3V8.css  index-De7nKcId.css  index-DeMMWth2.js  index-Df3ac9Va.css  index-Oko6t23u.js  index-qkQIH2fy.css  index-x372plmh.js  index-xoIOWQXQ.js  proc_rs_bg-B1HCmJtH.wasm  proc_rs_bg-BJ5uAtwQ.wasm  proc_rs_bg-BTR1-VjL.wasm  proc_rs_bg-CT6-FJan.wasm  proc_rs_bg-CWEeSvDk.wasm  proc_rs_bg-DY7iq2wG.wasm  proc_rs_bg-dfpgSN5D.wasm  proc_rs_bg-mgO-nyLZ.wasm
docs/data/factorio-2.0.66-sa-2.0.66/: mining-drill.json  recipe.json  resource.json
docs/data/factorio-2.0.74-pyanodons-3.0.62/: assembling-machine.json  furnace.json  item.json  resource.json
src/: data.rs  dataset.rs  ex_main.rs  lib.rs
src/data/: basic_data_parse.rs  calculator.rs  dataset.rs  fixtures.rs  fl_data_parse.rs  graph_configuration.rs  hydration.rs  mod.rs  model.rs  rl_data_parse.rs
src/data/fixtures/: assembling-machine.json  fl_data.json  fluid.json  furnace.json  item.json  mining-drill.json  recipe.json  resource.json  rocket-silo.json
www/: README.md  index.html  package-lock.json  package.json  vite.config.js
www/data/: datasets.json  fac-2.0.0.json  starbirds-0.1.2.json
www/data/factorio-2.0.66-sa-2.0.66/: assembling-machine.json  data.js  item.json
www/data/factorio-2.0.74-pyanodons-3.0.62/: fluid.json  mining-drill.json  rocket-silo.json
www/src/: App.vue  main.js
www/src/assets/: main.css
www/src/components/: Configure.vue  GraphRender.vue  ProcDisplay.vue  SearchResultsItem.vue  SearchResultsProcess.vue  proc_modifiers.js
www/src/components/current_configuration/: CurrentCfgItem.vue  CurrentCfgProc.vue  CurrentConfiguration.vue  display_item.js
www/src/data/: fac-2.0.0.json
