[package]
name = "proc-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[target.wasm32-unknown-unknown]
rustflags = ["--cfg getrandom_backend=\"wasm_js\""]

[target.wasm32-unknown-unknown.dependencies.getrandom]
version = "0.2.16"
features = ["js"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde-wasm-bindgen = "0.6.5"
serde_derive = "1.0.219"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = { version = "1.0.219", features = ["derive", "rc"] }

serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
wasm-bindgen-futures = "0.4.50"
regex = "1.11.1"
clap = { version = "4.5.41", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
nalgebra = "0.34.0"
tabled = "0.20.0"
tempdir = "0.3"
graphviz-rust = "0.9.5"
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }

[dependencies.web-sys]
version = "0.3.77"
features = ['console', 'Headers', 'Request', 'RequestInit', 'RequestMode', 'Response', 'Window', 'ReadableStream']

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
approx = "0.5.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
